<resources>
    <string name="app_name">Challenge 4 Binar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_data">HAPUS DATA</string>
    <string name="hapus">HAPUS</string>
    <string name="cancel">CANCEL</string>
    <string name="halo_username">Halo, username</string>
    <string name="logout">Logout</string>
    <string name="judul">Judul : Contoh judul</string>
    <string name="catatan">Catatan : Contoh catatan</string>
    <string name="login">LOGIN</string>
    <string name="masukkan_email">Masukkan email</string>
    <string name="masukkan_password">Masukkan password</string>
    <string name="belum_punya_akun">Belum punya akun? Klik disini</string>
    <string name="register">REGISTER</string>
    <string name="masukkan_username">Masukkan username</string>
    <string name="masukkan_konfirmasi_password">Masukkan konfirmasi password</string>
    <string name="daftar">DAFTAR</string>
    <string name="edit_data">EDIT DATA</string>
    <string name="masukkan_judul">Masukkan judul</string>
    <string name="masukkan_catatan">Masukkan catatan</string>
    <string name="input">INPUT</string>
</resources>