<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_edit_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="20dp"
        android:text="@string/edit_data"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/edit_input_judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_edit_data"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text"
        android:hint="@string/masukkan_judul"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="3dp"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edit_input_catatan"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@id/edit_input_judul"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_text"
        android:hint="@string/masukkan_catatan"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="3dp"
        android:textSize="24sp" />

    <Button
        android:id="@+id/edit_button_update_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_input_catatan"
        android:layout_centerHorizontal="true"
        android:text="@string/input" />

</RelativeLayout>