<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        android:id="@+id/text_register"
        android:layout_centerHorizontal="true"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:src="@drawable/ic_person"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:id="@+id/image_register"
        android:layout_below="@id/text_register"
        app:civ_border_width="3dp"
        app:civ_border_color="@color/black"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_username"
        android:padding="3dp"
        android:layout_below="@id/image_register"
        android:layout_marginHorizontal="15dp"
        android:id="@+id/register_input_username"
        android:background="@drawable/edit_text"
        android:layout_marginBottom="10dp"
        android:textSize="24sp"
        android:importantForAutofill="no"
        android:inputType="text" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_email"
        android:padding="3dp"
        android:layout_below="@id/register_input_username"
        android:layout_marginHorizontal="15dp"
        android:id="@+id/register_input_email"
        android:background="@drawable/edit_text"
        android:layout_marginBottom="10dp"
        android:textSize="24sp"
        android:inputType="text"
        android:importantForAutofill="no"
        tools:ignore="TextFields" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_password"
        android:padding="3dp"
        android:layout_below="@id/register_input_email"
        android:layout_marginHorizontal="15dp"
        android:id="@+id/register_input_password"
        android:background="@drawable/edit_text"
        android:layout_marginBottom="10dp"
        android:textSize="24sp"
        android:inputType="text"
        android:importantForAutofill="no"
        tools:ignore="TextFields" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_konfirmasi_password"
        android:padding="3dp"
        android:layout_below="@id/register_input_password"
        android:layout_marginHorizontal="15dp"
        android:id="@+id/register_input_konfirmasi_password"
        android:background="@drawable/edit_text"
        android:layout_marginBottom="10dp"
        android:textSize="24sp"
        android:inputType="text"
        android:importantForAutofill="no"
        tools:ignore="TextFields" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daftar"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/register_button_daftar"/>
</RelativeLayout>