<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textStyle="bold"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/text_login"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:src="@drawable/ic_person"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:id="@+id/image_login"
        android:layout_below="@id/text_login"
        app:civ_border_width="3dp"
        app:civ_border_color="@color/black"/>

    <EditText
        android:id="@+id/login_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_login"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text"
        android:hint="@string/masukkan_email"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="3dp"
        android:textSize="18sp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/login_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_input_email"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text"
        android:hint="@string/masukkan_password"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="3dp"
        android:textSize="18sp"
        tools:ignore="TextFields" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login_button_login"
        android:layout_marginHorizontal="50dp"
        android:layout_above="@id/login_belum_punya_akun"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/belum_punya_akun"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:textColor="@color/blue_navy"
        android:id="@+id/login_belum_punya_akun"/>
</RelativeLayout>